# pap

./: Cargo.toml  README.md
assets/: listing_38.asm
pap/: Cargo.toml
pap/assets/: 8086.instr  listing_42
pap/src/: common.rs  disassembler.rs  dsl.rs  lib.rs  simulator.rs  utils.rs
pap/tests/: tests.rs
pap/tests/cases/: listing_39.asm  listing_47.asm
pap_cli/: Cargo.toml
pap_cli/src/: main.rs
src/: main.rs  parser.rs  utils.rs
test_macros/: Cargo.toml
test_macros/src/: lib.rs
tests/: tests.rs
