[package]
name = "pap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.1", features = ["derive"] }
itertools = "0.10.5"
nom = "7.1.3"
strum = { version = "0.24.1", features = ["derive"] }
strum_macros = "0.24.3"

[dev-dependencies]
assert_cmd = { version = "2.0.10", features = ["color-auto"] }
itertools = "0.10.5"
tempfile = "3.5.0"
