[package]
name = "pap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
bitflags = "2.4.0"
bitvec = "1.0.1"
itertools = "0.10.5"
lazy_static = "1.4.0"
nom = "7.1.3"
strum = { version = "0.24.1", features = ["derive"] }
strum_macros = "0.24.3"

[dev-dependencies]
itertools = "0.10.5"
tempfile = "3.5.0"
test_macros = { path = "../test_macros" }
